<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TelStarLauncher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="market_name">全家盒市场</string>
    <string name="str_day">日</string>
    <string name="marquee_str_a">全家盒市场是国内专门为智能电视和智能电视盒定制的一款应用市场，致力于为广大电视用户提供各种高质量的电视应用与电视游戏。</string>
    <string name="projector">Projector</string>
    <string name="network_setting">NetWork</string>
    <string name="system_update">System Update</string>
    <string name="more_setting">More Settings</string>
    <string name="file_manage">File Manage</string>
    <string name="about_system">About System</string>
    <string name="model_number">Model number :</string>
    <string name="firmware_version">Android version :</string>
    <string name="kernel_version">Kernel version :</string>
    <string name="build_number">Build number : </string>
    <string name="miracast_server_name">Device Name: </string>
    <string name="top_about_system">About Settings</string>
    <string name="top_network_manage">NetWork Manage</string>
    <string name="miracast_setting">Miracast</string>
    <string name="media_center">Media Center</string>

    <string name="wifi">Wi-Fi</string>
    <string name="ethernet">Ethernet</string>
    <string name="no_network">Please choose Wi-Fi or Ethernet connection</string>
    <string name="no_network_wifi_only"> No network connection</string>
    <string name="wifi_closed"> Wi-Fi connection closed</string>
    <string name="eth_connectd"> Ethernet connected</string>
    <string name="ip_address"> IP Address:</string>
    <string name="gateway"> Gateway</string>
    <string name="subnet_mask"> Subnet Mask</string>
    <string name="mac_address"> MAC address:</string>
    <string name="wifi_connectting"> Wi-Fi Connecting ... </string>
    <string name="wifi_input_password"> Input Password </string>
    <string name="wifi_connect"> Connect Now </string>
    <string name="wifi_ap_select"> Select your AP </string>
    <string name="wifi_connected"> Wi-Fi connected </string>
    <string name="wifi_name"> AP Name: </string>
    <string name="wifi_level"> Wi-Fi Strength </string>
    <string name="show_password">Show Password</string>
    <string name="ethernet_connectting">Ethernet Connecting ...</string>
    <string name="refresh_now">Refresh Access Point List ...</string>
    <string name="password">Password</string>
    <string name="password_length_error">password is wrong!</string>
    <string name="class_apps">Apps</string>
    <string name="class_settings">Settings</string>
    <string name="class_helps">Helps</string>
    <string name="accessibility_battery_level">Battery percent.</string>



    <string name="ota_app_name">System update</string>
    <string name="ota_autoupdate_title_screen_preference">Automatic Update</string>
    <string name="ota_autoupdate_summary_screen_preference">Detect the firmware update online and upgrade system automatically.</string>
    <string name="ota_notification_download_finish">Update Image downloading finished</string>
    <string name="ota_download_button_cancel">Cancel</string>
    <string name="ota_download_finish_check_file">Download has finished,checking file</string>
    <string name="ota_task_running_error_dailog_title">Warning</string>
    <string name="ota_update_toast_on_going">Downloading...</string>
    <string name="ota_task_running_dailog_bt_ok">OK</string>
    <string name="ota_task_running_error_dailog_content">"Task is running,try later!"</string>
    <string name="ota_task_running_tips_title">Status</string>
    <string name="ota_task_running_tips_start_content">Automatic update enabled.</string>
    <string name="ota_task_running_tips_stop_content">Automatic update disabled.</string>
    <string name="ota_update_toast_stop_content">Update service has been stopped.</string>
    <string name="ota_update_toast_start_content">Update service has been started in background.</string>
    <string name="ota_checknow_title">Check for updates</string>
    <string name="ota_checknow_summary_content">Detects if a software upgrade is available</string>
    <string name="ota_up_to_date">Your system is up to date.</string>
    <string name="last_check_time">Last checked for update at 3:49 AM.</string>
    <string name="btn_download">Download</string>
    <string name="btn_cancel">Cancel</string>
    <string name="unkown_error">Unknown Error .</string>
    <string name="new_version">the new version of %s can be updated</string>
    <string name="no_signal">No Signal</string>

    <string name="info_mirror">Requires device support</string>
    <string name="info_dlna">\u0020wireless required,\ndownload from App Store</string>
</resources>
