<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference
                    android:key="ota_autoupdate_screen_checkbox_key"
                    android:title="@string/ota_autoupdate_title_screen_preference"
                    android:summary="@string/ota_autoupdate_summary_screen_preference" />
   <Preference android:key="ota_tips_key" 
                style="?android:preferenceInformationStyle"
                android:title="@string/ota_task_running_tips_title"
                android:summary="@string/ota_task_running_tips_start_content" /> 
    <Preference android:key="ota_checknow"          
                android:title="@string/ota_checknow_title"
                android:summary="@string/ota_checknow_summary_content" /> 
     />               
</PreferenceScreen>
