<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01122b"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.telstar.launcher.AboutSystem">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_other_setting" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px40"
            android:layout_marginRight="@dimen/px40"
            android:text="|"
            android:textColor="@android:color/white"
            android:textSize="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_about_system"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px60" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px100"
        android:orientation="vertical">


        <TextView
            android:id="@+id/model_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/model_number"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_system_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/model_number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_system_content_text_size"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_system_content_text_size" />

        <TextView
            android:id="@+id/firmware_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/firmware_version"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_system_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firmware_version_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_system_content_text_size" />

        <TextView
            android:id="@+id/build_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/build_number"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_system_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/build_number_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_system_content_text_size" />


        <TextView
            android:id="@+id/kernel_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/kernel_version"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_system_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kernel_version_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_system_content_text_size" />


    </LinearLayout>


</LinearLayout>

