<!-- animationType 默认无动画 此处设为平移
	 durationTranslate 平移用时 默为7ms
	 boarderInt 选中框边缘宽度-->
    <reco.frame.tv.view.TvRelativeLayoutAsGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingTop="@dimen/px100"
    android:paddingLeft="@dimen/px80"
    tv:animationType="TRANSLATE"
    tv:durationTranslate="11"
    tv:boarderInt="2"
    tv:cursorRes="@drawable/cursor_rectangle_boarder_white_nocornor" >

    <RelativeLayout
        android:id="@+id/projector_setting"
        android:layout_width="@dimen/px600"
        android:layout_height="@dimen/px600"
        android:layout_alignParentLeft="true"
        android:background="@drawable/cursor_rectangle_orange"
        android:focusable="true"
        android:nextFocusRight="@+id/network_setting" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px100"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/image_projector_setting"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px45"
            android:text="@string/projector"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/px100"
            android:gravity="center_horizontal"/>
        </RelativeLayout>



    <RelativeLayout
        android:id="@+id/network_setting"
        android:layout_width="@dimen/px380"
        android:layout_height="@dimen/px295"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/px10"
        android:layout_toRightOf="@+id/projector_setting"
        android:background="@drawable/cursor_rectangle_green"
        android:focusable="true"
        android:nextFocusDown="@+id/file_manage" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px100"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/image_network_setting"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px45"
            android:text="@string/network_setting"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/px100"
            android:gravity="center_horizontal"/>
        </RelativeLayout>




    <RelativeLayout
        android:id="@+id/miracast_setting"
        android:layout_width="@dimen/px380"
        android:layout_height="@dimen/px295"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/px10"
        android:layout_toRightOf="@+id/network_setting"
        android:focusable="true"
        android:background="@drawable/cursor_rectangle_blue" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px100"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/miracast"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px45"
            android:text="@string/miracast_setting"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/px100"
            android:gravity="center_horizontal"/>
        </RelativeLayout>




    <RelativeLayout
        android:id="@+id/media_center"
        android:layout_width="@dimen/px380"
        android:layout_height="@dimen/px295"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/px10"
        android:layout_toRightOf="@+id/miracast_setting"
        android:focusable="true"
        android:background="@drawable/cursor_rectangle_orange" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px100"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/media_center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px45"
            android:text="@string/media_center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/px100"
            android:gravity="center_horizontal"/>
        </RelativeLayout>



 <!--   <RelativeLayout
        android:id="@+id/file_manage"
        android:layout_width="@dimen/px295"
        android:layout_height="@dimen/px295"
        android:layout_below="@+id/network_setting"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginTop="@dimen/px10"
        android:layout_toRightOf="@+id/projector_setting"
        android:focusable="true"
        android:background="@drawable/cursor_rectangle_purple" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px100"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/filebrower"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px45"
            android:text="@string/file_manage"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/px100"
            android:gravity="center_horizontal"/>
        </RelativeLayout>-->



    <RelativeLayout
        android:id="@+id/system_update"
        android:layout_width="@dimen/px380"
        android:layout_height="@dimen/px295"
        android:layout_below="@+id/network_setting"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginTop="@dimen/px10"
        android:layout_toRightOf="@+id/projector_setting"
        android:focusable="true"
        android:background="@drawable/cursor_rectangle_blue" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px100"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/update_version"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px45"
            android:text="@string/system_update"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/px100"
            android:gravity="center_horizontal"/>
        </RelativeLayout>




    <RelativeLayout
        android:id="@+id/more_setting"
        android:layout_width="@dimen/px380"
        android:layout_height="@dimen/px295"
        android:layout_below="@+id/miracast_setting"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginTop="@dimen/px10"
        android:layout_toRightOf="@+id/system_update"
        android:focusable="true"
        android:background="@drawable/cursor_rectangle_purple">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px100"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/image_other_setting"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px45"
            android:text="@string/more_setting"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/px100"
            android:gravity="center_horizontal"/>
        </RelativeLayout>




    <RelativeLayout
        android:id="@+id/about_system"
        android:layout_width="@dimen/px380"
        android:layout_height="@dimen/px295"
        android:layout_below="@+id/media_center"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginTop="@dimen/px10"
        android:layout_toRightOf="@+id/more_setting"
        android:focusable="true"
        android:background="@drawable/cursor_rectangle_green" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/px100"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/settings_about"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px45"
            android:text="@string/about_system"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/px100"
            android:gravity="center_horizontal"/>
        </RelativeLayout>

</reco.frame.tv.view.TvRelativeLayoutAsGroup>